Fix h2 hover text-wrap

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -32,6 +32,7 @@ h1 {
 h2 > a:hover::after {
   content: '¶';
   margin-left: 20px;
+  position: absolute;
 }
 
 h2 { @include header(38px); }
